--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 0;
+    padding: 0px;
 }
 
 #about-text {
